fix: Pykonik BRB text overflow
Fixed Pykonik brb text overflowing

--- a/static/branding/pykonik.scss
+++ b/static/branding/pykonik.scss
@@ -15,3 +15,8 @@ body, html {
     height: 297px;
   }
 }
+
+.obs-intermission-info {
+  left: 840px;
+  white-space: nowrap;
+}
